# tinkr

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  tinker.toml
.claude/: CLAUDE.md  settings.json
.github/workflows/: publish.yml
deploy/: Dockerfile  docker-compose.yml  prometheus.yml
deploy/aws/: iam-policy.json  task-definition.json
deploy/azure/: container-app.yaml
deploy/gcp/: cloudrun.yaml
docs/: docusaurus.config.js  package-lock.json  sidebars.js
docs/docs/: configuration.md  index.md  install.md  security.md
docs/docs/backends/: azure.md  cloudwatch.md  datadog.md  elastic.md  gcp.md  grafana.md  index.md  otel.md
docs/docs/commands/: alert.md  anomaly.md  deploy.md  diff.md  index.md  investigate.md  logs.md  metrics.md  profile.md  rca.md  slo.md  tail.md  trace.md  watch.md
docs/docs/deployment/: aws.md  azure.md  docker.md  gcp.md
docs/docs/integrations/: github.md  slack.md  webhooks.md
src/tinker/: __init__.py  config.py  toml_config.py
src/tinker/agent/: __init__.py  error_classifier.py  guardrails.py  llm.py  orchestrator.py  prompts.py  summarizer.py  tools.py
src/tinker/backends/: __init__.py  azure.py  base.py  cloudwatch.py  datadog.py  elastic.py  gcp.py  grafana.py  otel.py
src/tinker/client/: __init__.py  base.py  config.py  local.py  remote.py
src/tinker/code/: __init__.py  fix_applier.py  github_tools.py  repo.py
src/tinker/interfaces/: __init__.py  cli.py  deploy.py  handlers.py  init_wizard.py  investigate_repl.py  monitor_repl.py  renderers.py  slack_bot.py
src/tinker/mcp_servers/: __init__.py  azure_server.py  base.py  cloudwatch_server.py  datadog_server.py  elastic_server.py  github_server.py  grafana_server.py
src/tinker/monitor/: __init__.py  loop.py  summarizer.py  watch_daemon.py
src/tinker/notifiers/: slack.py
src/tinker/query/: __init__.py  ast.py  parser.py  resource.py
src/tinker/query/translators/: azure.py  cloudwatch.py  datadog.py  elastic.py  gcp.py  loki.py
src/tinker/server/: __init__.py  app.py  auth.py  notifiers.py  session_store.py  slack_handler.py  watch_manager.py
src/tinker/server/routes/: agent.py  mcp.py  profiles.py  query.py  watches.py
src/tinker/store/: __init__.py  db.py
src/tinker/watches/: manager.py
tests/manual/: README.md  docker-compose.yml  dummy_server.py  generate_traffic.sh  prometheus.yml  run.sh
tests/test_agent/: test_guardrails.py  test_orchestrator.py
tests/test_backends/: test_base.py  test_cloudwatch.py
tests/test_mcp_servers/: test_cloudwatch_server.py
tests/test_query/: test_translators.py
